Add Task Manager, Improve Notification Interface, add view manage support, improve drivers code, improve UI and fix various bugs.